--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,27 +22,28 @@
         android:id="@+id/box_two_text"
         style="@style/whiteBox"
         android:layout_width="@dimen/box_two_width"
-        android:layout_height="@dimen/box_two_height"
+        android:layout_height="0dp"
         android:layout_marginTop="@dimen/margin_small"
         android:text="@string/box_two_content"
+        app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="@+id/box_one_text"
         app:layout_constraintTop_toBottomOf="@+id/box_one_text" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/box_three_text"
         style="@style/whiteBox"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:text="@string/box_three_content"
         android:layout_marginStart="@dimen/margin_small"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        android:text="@string/box_three_content"
+        app:layout_constraintBottom_toTopOf="@+id/box_four_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/box_two_text"
         app:layout_constraintTop_toTopOf="@+id/box_two_text"
         app:layout_constraintVertical_chainStyle="spread_inside" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/box_four_text"
         style="@style/whiteBox"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -50,21 +51,61 @@
         android:layout_marginTop="@dimen/margin_small"
         android:layout_marginBottom="@dimen/margin_small"
         android:text="@string/box_four_content"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintBottom_toTopOf="@+id/box_five_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/box_two_text"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/box_three_text" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/box_five_text"
         style="@style/whiteBox"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:text="@string/box_five_content"
         android:layout_marginStart="@dimen/margin_small"
+        android:text="@string/box_five_content"
         app:layout_constraintBottom_toBottomOf="@+id/box_two_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/box_two_text"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/box_four_text" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.3" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/red_bttn_txt"
+        android:backgroundTint="@color/red"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/button2"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/yellow_bttn_txt"
+        android:backgroundTint="@color/yellow"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/button3"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/button" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/green_bttn_txt"
+        android:backgroundTint="@color/green"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/button2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
